objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amortized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amortized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COL_License_Type__c</fullName>
        <label>COL License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Third Party Equipment / Software / Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol__c</fullName>
        <formula>CASE(Region__c , 
&quot;JPY&quot;,&quot;¥&quot;,
&quot;GBP&quot;,&quot;£&quot;,
&quot;EUR&quot;,&quot;€&quot;,
&quot;BRL&quot;,&quot;R$&quot;,
&quot;USD&quot;,&quot;$&quot;,
&quot;AUD&quot;,&quot;$&quot;,
&quot;EMEA USD&quot;,&quot;$&quot;,
&quot;NZD&quot;,&quot;$&quot;,
&quot;$&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Description__c</fullName>
        <label>Customer Part Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Definition__c</fullName>
        <label>Legal Definition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_Price_Verbiage__c</fullName>
        <label>List Price Verbiage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orderable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orderable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Category_Comments__c</fullName>
        <label>Part Category Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Category_Name__c</fullName>
        <label>Part Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <label>Part Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_State_Type_ID__c</fullName>
        <label>Part State Type ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_State_Type__c</fullName>
        <label>Part State Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Type_ID__c</fullName>
        <label>Part Type ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <label>Part Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Hosted Services</fullName>
                </value>
                <value>
                    <fullName>System Bundle</fullName>
                </value>
                <value>
                    <fullName>Technical Support Services</fullName>
                </value>
                <value>
                    <fullName>Third Party Hardware</fullName>
                </value>
                <value>
                    <fullName>Third Party Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Validation__c</fullName>
        <label>Part Validation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Margin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Per_X__c</fullName>
        <label>Per X</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>per Agent</fullName>
                </value>
                <value>
                    <fullName>per Supervisor</fullName>
                </value>
                <value>
                    <fullName>per Business User</fullName>
                </value>
                <value>
                    <fullName>per Session</fullName>
                </value>
                <value>
                    <fullName>per Organization</fullName>
                </value>
                <value>
                    <fullName>per Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EMEA USD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Price_Verbiage__c</fullName>
        <label>Retail Price Verbiage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Category_Type__c</fullName>
        <label>Revenue Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amortize</fullName>
                </value>
                <value>
                    <fullName>Recognize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Category__c</fullName>
        <label>Summary Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Center Provisioning</fullName>
                </value>
                <value>
                    <fullName>Education / Training / Documentation</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Monthly User</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>Other CaaS Service</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>RVA</fullName>
                </value>
                <value>
                    <fullName>Telco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Small Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Terms__c</fullName>
        <label>Warranty Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>AUD_Base_Agent</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Customer_Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>BRL,JPY,EUR,GBP,EMEA USD,USD,AUD</value>
        </filters>
        <filters>
            <field>Part_Name__c</field>
            <operation>contains</operation>
            <value>cloud storage</value>
        </filters>
        <label>AUD Base Agent Parts</label>
    </listViews>
    <listViews>
        <fullName>All_AUD_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>All AUD Parts</label>
    </listViews>
    <listViews>
        <fullName>All_BRL_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>BRL</value>
        </filters>
        <label>All BRL Parts</label>
    </listViews>
    <listViews>
        <fullName>All_Concurrent_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Concurrent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Concurrent Parts</label>
    </listViews>
    <listViews>
        <fullName>All_EMEA_USD_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA USD</value>
        </filters>
        <label>All EMEA USD Parts</label>
    </listViews>
    <listViews>
        <fullName>All_EUR_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <filters>
            <field>Summary_Category__c</field>
            <operation>equals</operation>
            <value>Data Center Provisioning</value>
        </filters>
        <label>All EUR Parts</label>
    </listViews>
    <listViews>
        <fullName>All_GBP_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>All GBP Parts</label>
    </listViews>
    <listViews>
        <fullName>All_JPY_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>JPY</value>
        </filters>
        <label>All JPY Parts</label>
    </listViews>
    <listViews>
        <fullName>All_Parts_No_Sort_Order</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sort_Order__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Parts - No Sort Order</label>
    </listViews>
    <listViews>
        <fullName>All_Parts_Small_Center</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Small Center</value>
        </filters>
        <label>All Parts - Small Center</label>
    </listViews>
    <listViews>
        <fullName>All_USD_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Summary_Category__c</columns>
        <columns>Part_Category_Name__c</columns>
        <columns>Customer_Part_Description__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Tier__c</columns>
        <columns>Region__c</columns>
        <columns>List_Price__c</columns>
        <columns>Part_Validation__c</columns>
        <columns>Active__c</columns>
        <columns>Concurrent__c</columns>
        <columns>Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>All USD Parts</label>
    </listViews>
    <listViews>
        <fullName>Misc_Monthly_Fees</fullName>
        <columns>NAME</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Part_Category_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Category_Name__c</field>
            <operation>contains</operation>
            <value>Monthly Fees</value>
        </filters>
        <label>Misc Monthly Fees</label>
    </listViews>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>